--- a/outliers.rmd
+++ b/outliers.rmd
@@ -1,3 +1,5 @@
+```{r eval=FALSE, echo=TRUE, message=FALSE, warning=FALSE}
+
 if(!exists("dt.RE_data")){ source("setUp.R")}
 
 indexPlotLeverage <- function(model){
@@ -77,70 +79,6 @@ indexPlotJackResiduals <- function(model){
 }
 
 
-
-
-# Þurfum líklega að laga þetta fall
-#removeOutliersWStdResMoreThanThree <- function(model){
-#  diag <- data.table(fortify(model))
-#  rowsWithNoOutliers <- diag[abs(diag$.stdresid) < 3,]
-#  kdagur <- rowsWithNoOutliers$kdagur         
-#  nuvirdi <- rowsWithNoOutliers$nuvirdi        
-#  teg_eign <- as.factor(rowsWithNoOutliers$teg_eign)      
-#  byggar <- rowsWithNoOutliers$byggar         
-#  haednr <- rowsWithNoOutliers$haednr        
-#  lyfta <- rowsWithNoOutliers$lyfta       
-#  ibm2  <- rowsWithNoOutliers$ibm2         
-#  fjhaed <- rowsWithNoOutliers$fjhaed    
-#  fjbilast  <- rowsWithNoOutliers$fjbilast    
-#  fjbkar  <- rowsWithNoOutliers$fjbkar
-#  fjsturt <- rowsWithNoOutliers$fjsturt
-#  fjklos  <- rowsWithNoOutliers$fjklos 
-#  fjeld  <- rowsWithNoOutliers$fjeld    
-#  fjherb  <- rowsWithNoOutliers$fjherb
-#  fjstof  <- rowsWithNoOutliers$fjstof    
-#  fjgeym  <- rowsWithNoOutliers$fjgeym     
-#  stig10  <- rowsWithNoOutliers$stig10   
-#  ibteg <- as.factor(rowsWithNoOutliers$ibteg) 
-#  k.ar <- rowsWithNoOutliers$k.ar
-#  return(
-#    lm(nuvirdi ~ kdagur + teg_eign + byggar + haednr + lyfta + ibm2 + fjhaed + fjbilast + fjbkar + fjsturt + 
-#         fjklos + fjeld + fjherb + fjstof + fjgeym + stig10 + ibteg + k.ar, data=rowsWithNoOutliers)
-#    )
-#}
-
-#.hat,.sigma,.cooksd,.fitted.resid,.stdresid
-
-#removeOutliersWStdResMoreThanThree <- function(model){
-#  diag <- data.table(fortify(model))
-#  rowsWithNoOutliers <- diag[abs(diag$.stdresid) < 3,]
-#  rowsWithNoOutliers <- rowsWithNoOutliers[ ,c(".hat",".sigma",".cooksd",".fitted",".resid",".stdresid") := NULL]
-  #kdagur <- rowsWithNoOutliers$kdagur         
-  #nuvirdi <- rowsWithNoOutliers$nuvirdi        
-  #teg_eign <- as.factor(rowsWithNoOutliers$teg_eign)      
-  #byggar <- rowsWithNoOutliers$byggar         
-  #haednr <- rowsWithNoOutliers$haednr        
-  #lyfta <- rowsWithNoOutliers$lyfta       
-  #ibm2  <- rowsWithNoOutliers$ibm2         
-  #fjhaed <- rowsWithNoOutliers$fjhaed    
-  #fjbilast  <- rowsWithNoOutliers$fjbilast    
-  #fjbkar  <- rowsWithNoOutliers$fjbkar
-  #fjsturt <- rowsWithNoOutliers$fjsturt
-  #fjklos  <- rowsWithNoOutliers$fjklos 
-  #fjeld  <- rowsWithNoOutliers$fjeld    
-  #fjherb  <- rowsWithNoOutliers$fjherb
-  #fjstof  <- rowsWithNoOutliers$fjstof    
-  #fjgeym  <- rowsWithNoOutliers$fjgeym     
-  #stig10  <- rowsWithNoOutliers$stig10   
-  #ibteg <- as.factor(rowsWithNoOutliers$ibteg) 
-  #k.ar <- rowsWithNoOutliers$k.ar
-#  return(
-#    lm(nuvirdi ~ ., data=rowsWithNoOutliers)
-#  )
-#}
-
-
-
-
 removeOutliersWStdResMoreThanThree <- function(dt){
   model <- lm(nuvirdi ~ .,data=dt)
   diag <- data.table(fortify(model))
@@ -183,36 +121,6 @@ removeInfluential <- function(dt, maxCookDistance){
 }
 
 
-#removeInfluential <- function(model, maxCookDistance){
-#  diag <- data.table(fortify(model))
-#  rowsWithNoInfluentials <- diag[diag$.cooksd < maxCookDistance,]
-#  rowsWithNoInfluentials <- rowsWithNoInfluentials[ ,c(".hat",".sigma",".cooksd",".fitted",".resid",".stdresid") := NULL]
-  #kdagur <- rowsWithNoInfluentials$kdagur         
-  #nuvirdi <- rowsWithNoInfluentials$nuvirdi        
-  #teg_eign <- as.factor(rowsWithNoInfluentials$teg_eign)      
-  #byggar <- rowsWithNoInfluentials$byggar         
-  #haednr <- rowsWithNoInfluentials$haednr        
-  #lyfta <- rowsWithNoInfluentials$lyfta       
-  #ibm2  <- rowsWithNoInfluentials$ibm2         
-  #fjhaed <- rowsWithNoInfluentials$fjhaed    
-  #fjbilast  <- rowsWithNoInfluentials$fjbilast    
-  #fjbkar  <- rowsWithNoInfluentials$fjbkar
-  #fjsturt <- rowsWithNoInfluentials$fjsturt
-  #fjklos  <- rowsWithNoInfluentials$fjklos 
-  #fjeld  <- rowsWithNoInfluentials$fjeld    
-  #fjherb  <- rowsWithNoInfluentials$fjherb
-  #fjstof  <- rowsWithNoInfluentials$fjstof    
-  #fjgeym  <- rowsWithNoInfluentials$fjgeym     
-  #stig10  <- rowsWithNoInfluentials$stig10   
-  #ibteg <- as.factor(rowsWithNoInfluentials$ibteg) 
-  #k.ar <- rowsWithNoInfluentials$k.ar
-#  return(
-#    lm(nuvirdi ~ ., data=rowsWithNoInfluentials)
-#  )
-#}
-
-
-
 QQplotResiduals <- function(model){
   diag <- data.table(fortify(model))
   res_sd <- sd(diag$.resid)
@@ -236,3 +144,7 @@ RemoveNOutliers <- function(dt, n){
   }
   return(index)
 }
+
+
+```
+
